<resources>
    <string name="app_name">Sudoku</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Had</string>
    <string name="create">Create</string>
    <string name="title">Create And Play Sudoku</string>
    <string name="exit">Exit</string>
    <string name="continueString">Continue</string>
    <string name="about">About</string>
    <string name="option">Option</string>
    <string name="hint">Hint</string>
    <string name="sound">Sound</string>
    <string name="title_activity_option">OptionActivity</string>
    <string name="hint_summary">Show hint</string>
    <string name="sound_summary">Play sound</string>
    <string name="option_shortcut">s</string>
    <string name="problem">Problems</string>
    <string name="difficulty">Difficulty</string>
    <string name="title_activity_sudoku_play">SudokuPlayActivity</string>
    <string name="title_activity_problem_select">ProblemSelectActivity</string>
    <string name="my_problem">My Problems</string>
    <string name="play">Play</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="problem1">Problem1</string>
    <string name="problem2">Problem2</string>
    <string name="problem3">Problem3</string>
    <string name="problem4">Problem4</string>
    <string name="problem5">Problem5</string>
    <string name="problem6">Problem6</string>
    <string name="problem7">Problem7</string>
    <string name="problem8">Problem8</string>
    <string name="problem9">Problem9</string>
    <string name="problem10">Problem10</string>
    <string name="create_mode">Create Mode</string>
    <string name="play_mode">Play Mode</string>
    <string name="save_button">Save</string>
    <string name="load_button">Load</string>
</resources>
