<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProblemSelectActivity"
    android:id="@+id/problemSelector"
    android:background="@color/black"
    android:layout_gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/problem1"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/problem1"
                android:textSize="30sp" />

            <Button
                android:id="@+id/problem2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/problem2"
                android:textSize="30sp" />

            <Button
                android:id="@+id/problem3"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/problem3"
                android:textSize="30sp" />

            <Button
                android:id="@+id/problem4"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/problem4"
                android:textSize="30sp" />

            <Button
                android:id="@+id/problem5"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/problem5"
                android:textSize="30sp" />

            <Button
                android:id="@+id/problem6"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/problem6"
                android:textSize="30sp" />

            <Button
                android:id="@+id/problem7"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/problem7"
                android:textSize="30sp" />

            <Button
                android:id="@+id/problem8"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/problem8"
                android:textSize="30sp" />

            <Button
                android:id="@+id/problem9"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/problem9"
                android:textSize="30sp" />

            <Button
                android:id="@+id/problem10"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/problem10"
                android:textSize="30sp" />
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>